--- a/src/index.css
+++ b/src/index.css
@@ -50,19 +50,11 @@ td{
   }
 }
 
-.scrollbar::-webkit-scrollbar {
-  width: 3px !important;
+.hidescrollbar::-webkit-scrollbar {
+  display: none !important;
 }
 
-.scrollbar::-webkit-scrollbar-track {
-  background-color: darkgrey !important;
-}
-
-.scrollbar::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 6px #2c3e50 !important;
-}
-
-.scrollbar {
-  scrollbar-width: thin !important;
-  scrollbar-color: #2c3e50 #e0e0e0 !important;
+.hidescrollbar {
+  -ms-overflow-style: none !important;
+  scrollbar-width: none !important;
 }
